# CUDA-wrapper

./: CMakeLists.txt  CudaTest.sln  README.md
CudaTest/: CudaTest.vcxproj  error.hpp  kernel.cu  main.cu  sphere.h  vec.h
CudaTest/Debug/: kernel.cu.deps
CudaTest/Debug/CudaTest.tlog/: CudaTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
CudaTest/Release/: kernel.cu.cache  kernel.cu.deps  kernel.cu835426417.deps
CudaTest/Release/CudaTest.tlog/: CudaTest.lastbuildstate
CudaTest/x64/Release/: kernel.cu.cache  kernel.cu835426417.deps  main.cu-895239055.deps  main.cu.cache
CudaTest/x64/Release/CudaTest.tlog/: CudaTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
driver-test/: main.cu
ogl-test/: main.cu  surface.hpp
runtime-test/: main.cu
test/: main.cu
wrapper/: common.hpp  device.hpp  kernel.cu  memory.hpp  properties.hpp  stream.hpp
wrapper/driver/: context.hpp  device.hpp  error.hpp  init.hpp  version.hpp
wrapper/runtime/: device.hpp  error.hpp  event.hpp  kernel.cu  memory.hpp  stream.hpp  utils.hpp  version.hpp
